bitfield/tests/09-variant-out-of-range2.stderr
error[E0080]: evaluation of constant value failed
  --> tests/09-variant-out-of-range2.rs:18:5
   |
18 |     External,
   |     ^^^^^^^^ attempt to compute `0_u8 - 1_u8`, which would overflow
